Bug 13315 [Follow-up] Add feedback for last item checked out to circulation.pl
This patch changes the position and styling of the information about the
last checkout so that it is grouped with the checkout form itself,
placing the message in a more visible position, especially for patrons
with a lot of information in the right-hand messages column which might
push the checkouts table down offscreen.

To test, apply the patch and clear your browser cache in order to
refresh the main CSS file.

Check out an item and confirm that a message is prominently displayed.

--- a/koha-tmpl/intranet-tmpl/prog/en/css/staff-global.css
+++ b/koha-tmpl/intranet-tmpl/prog/en/css/staff-global.css
@@ -333,6 +333,13 @@ fieldset {
     border-radius:5px;
 }
 
+fieldset.lastchecked {
+    margin-bottom : 0;
+    border-bottom-width: 0;
+    border-bottom-left-radius: 0;
+    border-bottom-right-radius: 0;
+}
+
 legend {
 	font-size : 123.1%;
 	font-weight : bold;
@@ -2763,4 +2770,10 @@ span.onsite_checkout {
     background-color : rgba(255, 242, 206, 0.5);
     border-radius: 4px;
     border : 1px solid #FFF2CE;
+}
+div.lastchecked {
+    padding : .2em 1em;
+    border: 2px solid #BCDB89;
+    border-bottom-left-radius: 5px;
+    border-bottom-right-radius: 5px;
 }
